--- a/ImageTransformation/Pix2Pix(CGAN)/Pix2Pix(CGAN).ipynb
+++ b/ImageTransformation/Pix2Pix(CGAN)/Pix2Pix(CGAN).ipynb
@@ -218,7 +218,7 @@
         "\n",
         "  # Resizing images to 286 X 286 X 3\n",
         "  resized_input_img, resized_real_img = resize_image(normalize_input_img, \n",
-        "                                      normalized_real_img, IMG_HEIGHT, IMG_WIDTH)\n",
+        "                                      normalized_real_img, 286, 286)\n",
         "\n",
         "  # Cropping images to 256 X 256 X 3\n",
         "  processed_input_img, processed_real_img = get_random_crop(resized_input_img, \n",
