--- a/ImageTransformation/NeuralStyleTransfer/NeuralStyleTransfer.ipynb
+++ b/ImageTransformation/NeuralStyleTransfer/NeuralStyleTransfer.ipynb
@@ -6,6 +6,7 @@
       "name": "NeuralStyleTransfer.ipynb",
       "provenance": [],
       "private_outputs": true,
+      "toc_visible": true,
       "machine_shape": "hm"
     },
     "kernelspec": {
@@ -41,7 +42,25 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
+        "from datetime import datetime\n",
+        "\n",
         "%matplotlib inline"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GdggKNP36XUi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Hyper-parameters\n",
+        "CONTENT_WEIGHT = 1e3\n",
+        "STYLE_WEIGHT = 1e1\n",
+        "EPOCHS = 1000"
       ],
       "execution_count": 0,
       "outputs": []
@@ -59,49 +78,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ur0MRllgnXXf",
+        "id": "hZGZrX2AuQe2",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def show_img(img, title):\n",
-        "  if len(img.shape) > 3:\n",
-        "    img = tf.squeeze(img, axis=0)\n",
+        "def show_result(image, save_fig=False):\n",
+        "  if len(image.shape) > 3:\n",
+        "    image = tf.squeeze(image, axis=0)\n",
         "  \n",
-        "  plt.title(title)\n",
-        "  plt.imshow(img)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CJ8oJcZ1lhQ2",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def show_tensor_as_img(tensor):\n",
-        "  img = tensor.numpy()\n",
-        "  show_img(img, \"Generated Image\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xJ1d_gFgQ-yT",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def save_img(img, img_path):\n",
-        "  if len(img.shape) > 3:\n",
-        "    img = tf.squeeze(img, axis=0)\n",
-        "  img *= 255.0 \n",
-        "  tf.keras.preprocessing.image.save_img(img_path, img)"
+        "  fig = plt.figure() \n",
+        "  fig.figsize=(15,15)\n",
+        "  plt.title(\"Styled Image\")\n",
+        "  plt.axis(\"off\")\n",
+        "  plt.imshow(image)\n",
+        "  \n",
+        "  if save_fig:\n",
+        "    fig.savefig(f\"styled_image_{datetime.now()}.png\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -134,7 +127,7 @@
         "  scale = tf.constant(max_size / max_dim, dtype=tf.float32)\n",
         "  new_shape = tf.cast(shape * scale, dtype=tf.int32)\n",
         "  resized_img = tf.image.resize(img, new_shape, name=\"resizing_img\")\n",
-        "  return resized_img[tf.newaxis, :]"
+        "  return resized_img[tf.newaxis, ...]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -158,6 +151,24 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-Tumpj0fxk2H",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def create_model(layer_names):\n",
+        "    # Loading pre-trained VGG19 network\n",
+        "    vgg = tf.keras.applications.VGG19(include_top=False, weights='imagenet')\n",
+        "    vgg.trainable = False\n",
+        "    output_layers = [vgg.get_layer(name).output for name in layer_names]\n",
+        "    return tf.keras.Model(vgg.input, output_layers)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "YoJRBh48YAG_",
@@ -170,43 +181,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "noQuB7aOOWYu",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def gram_matrix(feature_map):\n",
-        "  b, h, w, c = feature_map.shape\n",
-        "  reshaped_map = tf.reshape(feature_map, [w * h, c])\n",
-        "  normalization_factor = tf.cast(h * w * c, dtype=tf.float32)\n",
-        "  gram_matrix = tf.linalg.einsum('bijc,bijd->bcd', feature_map, feature_map, \n",
-        "                                 name=\"gram_matrix\")\n",
-        "  return gram_matrix / normalization_factor"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "IokJTt2RbDWr",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def content_style_loss(generated_outputs, content_targets, style_targets, \n",
-        "                       content_weight, style_weight):\n",
-        "  generated_content_outputs = generated_outputs[\"content_map\"]\n",
-        "  generated_style_outputs = generated_outputs[\"style_map\"]\n",
-        "  content_loss = [tf.reduce_mean((content_targets[layer_name] - generated_content_outputs[layer_name])**2)\n",
-        "                                 for layer_name in generated_content_outputs.keys()]\n",
+        "def loss_cal(outputs, content_targets, style_targets):\n",
+        "  content_outputs = outputs[\"content_map\"]\n",
+        "  style_outputs = outputs[\"style_map\"]\n",
+        "  \n",
+        "  content_loss = [tf.reduce_mean((content_targets[layer_name] - content_outputs[layer_name])**2)\n",
+        "                                 for layer_name in content_outputs.keys()]\n",
         "  content_loss = tf.reduce_mean(content_loss, name=\"content_loss\")\n",
         "  \n",
-        "  style_loss = [tf.reduce_mean((style_targets[layer_name] - generated_style_outputs[layer_name])**2)\n",
-        "                                 for layer_name in generated_style_outputs.keys()]\n",
+        "  style_loss = [tf.reduce_mean((style_targets[layer_name] - style_outputs[layer_name])**2)\n",
+        "                                 for layer_name in style_outputs.keys()]\n",
         "  style_loss = tf.reduce_mean(style_loss, name=\"style_loss\")\n",
         "\n",
-        "  total_loss = content_weight * content_loss + style_weight * style_loss\n",
+        "  total_loss = CONTENT_WEIGHT * content_loss + STYLE_WEIGHT * style_loss\n",
         "  return total_loss"
       ],
       "execution_count": 0,
@@ -220,36 +212,17 @@
         "colab": {}
       },
       "source": [
-        "def train_step(img, model, optimizer, content_targets, style_targets, \n",
-        "               content_weight, style_weight):\n",
+        "def train_step(image, model, content_targets, style_targets, sum_writer, epoch):\n",
         "  with tf.GradientTape() as tape:\n",
-        "    generated_outputs = model(img)\n",
-        "    loss = content_style_loss(generated_outputs, content_targets, style_targets,\n",
-        "                              content_weight, style_weight)\n",
+        "    outputs = model(image)\n",
+        "    loss = loss_cal(outputs, content_targets, style_targets)\n",
         "\n",
-        "  gradients = tape.gradient(loss, img)\n",
-        "  optimizer.apply_gradients([(gradients, img)])\n",
-        "  img.assign(clip_img(img))\n",
-        "  return loss"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4wQfwozN6ol0",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def get_custom_vgg_model(layer_names):\n",
-        "  # Loading pre-trained VGG19 network\n",
-        "  vgg = tf.keras.applications.VGG19(include_top=False, weights='imagenet')\n",
-        "  vgg.trainable = False\n",
-        "  output_layers = [vgg.get_layer(name).output for name in layer_names]\n",
-        "  model = tf.keras.Model(vgg.input, output_layers)\n",
-        "  return model"
+        "  gradients = tape.gradient(loss, image)\n",
+        "  model.optimizer.apply_gradients([(gradients, image)])\n",
+        "  image.assign(clip_img(image))\n",
+        "  \n",
+        "  with sum_writer.as_default():\n",
+        "    tf.summary.scalar('Loss', loss, step=epoch)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -266,7 +239,9 @@
         "\n",
         "  def __init__(self, content_layers, style_layers):\n",
         "    super(NSTModel, self).__init__()\n",
-        "    self.custom_vgg = get_custom_vgg_model(content_layers + style_layers)\n",
+        "    self.optimizer = tf.optimizers.Adam(learning_rate=0.001, beta_1=0.99, \n",
+        "                                        epsilon=1e-1)\n",
+        "    self.model = create_model(content_layers + style_layers)\n",
         "    self.preprocessor = tf.keras.applications.vgg19.preprocess_input\n",
         "    self.content_layers = content_layers\n",
         "    self.style_layers = style_layers\n",
@@ -274,17 +249,24 @@
         "\n",
         "  def call(self, inputs):\n",
         "    inputs = inputs * 255.0\n",
-        "    preprocessed_inputs = self.preprocessor(inputs)\n",
-        "    outputs = self.custom_vgg(preprocessed_inputs)\n",
+        "    processed_inputs = self.preprocessor(inputs)\n",
+        "    outputs = self.model(processed_inputs)\n",
         "    content_outputs, style_outputs = outputs[:self.n_content_layers], \\\n",
         "                                      outputs[self.n_content_layers:]\n",
-        "    style_corr_values = [gram_matrix(feature_map) \n",
+        "    style_corr_values = [self._gram_matrix(feature_map) \n",
         "                        for feature_map in style_outputs]\n",
         "    content_map = {layer_name: layer_output for layer_name, layer_output \n",
         "                   in zip(self.content_layers, content_outputs)}\n",
         "    style_map = {layer_name: layer_output for layer_name, layer_output\n",
         "                 in zip(self.style_layers, style_corr_values)}\n",
-        "    return {\"content_map\": content_map, \"style_map\": style_map}"
+        "    return {\"content_map\": content_map, \"style_map\": style_map}\n",
+        "\n",
+        "  def _gram_matrix(self, feature_map):\n",
+        "    b, h, w, c = feature_map.shape\n",
+        "    normalization_factor = tf.cast(h * w, dtype=tf.float32)\n",
+        "    gram_matrix = tf.linalg.einsum('bijc,bijd->bcd', feature_map, feature_map, \n",
+        "                                  name=\"gram_matrix\")\n",
+        "    return gram_matrix / normalization_factor"
       ],
       "execution_count": 0,
       "outputs": []
@@ -336,10 +318,7 @@
       },
       "source": [
         "# Creating object for our model\n",
-        "model = NSTModel(content_layers, style_layers)\n",
-        "\n",
-        "# Creating our model optimzer\n",
-        "adam_opt = tf.optimizers.Adam(learning_rate=0.001, beta_1=0.99, epsilon=1e-1)"
+        "model = NSTModel(content_layers, style_layers)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -353,10 +332,10 @@
       },
       "source": [
         "# Loading our content image\n",
-        "content_img = prepare_img(\"/content/bhai.jpeg\")\n",
+        "content_img = prepare_img(\"bhai.jpeg\")\n",
         "\n",
-        "# Preparing our target values\n",
-        "content_targets = model(content_img)[\"content_map\"]\n",
+        "# Loading our style image\n",
+        "style_img = prepare_img(\"style.jpg\")\n",
         "\n",
         "# Preparing our output image\n",
         "output_img = tf.Variable(content_img)"
@@ -372,10 +351,10 @@
         "colab": {}
       },
       "source": [
-        "# Loading our style image\n",
-        "style_img = prepare_img(\"/content/style1.jpg\")\n",
+        "# Preparing our target content values\n",
+        "content_targets = model(content_img)[\"content_map\"]\n",
         "\n",
-        "# Preparing our target values\n",
+        "# Preparing our target style values\n",
         "style_targets = model(style_img)[\"style_map\"]"
       ],
       "execution_count": 0,
@@ -384,15 +363,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "13_ca1SCr3Ai",
+        "id": "GZ3zvX155yOJ",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "plt.subplot(1, 2, 1)\n",
-        "show_img(content_img, \"Content Image\")\n",
-        "plt.subplot(1, 2, 2)\n",
-        "show_img(style_img, \"Style Image\")"
+        "# Preparing tensorboad for visualization\n",
+        "log_dir = \"logs/\"\n",
+        "summary_writer = tf.summary.create_file_writer(\n",
+        "    log_dir + \"fit/\" + datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
+        "\n",
+        "%load_ext tensorboard\n",
+        "%tensorboard --logdir {log_dir}"
       ],
       "execution_count": 0,
       "outputs": []
@@ -405,20 +387,12 @@
         "colab": {}
       },
       "source": [
-        "# Defining our hyper-parameters\n",
-        "content_weight = 1e-4\n",
-        "style_weight = 1e-3\n",
-        "n_iter = 300\n",
-        "\n",
         "# Running gradient descent on output image\n",
-        "for cur_iter in range(1, n_iter+1):\n",
-        "  loss = train_step(output_img, model, adam_opt, content_targets, style_targets,\n",
-        "                    content_weight, style_weight)\n",
-        "  if cur_iter % 50 == 0:\n",
-        "    print(\"Loss after {} iteration is: {:.4f}\".format(cur_iter, loss))\n",
-        "    save_img(output_img.numpy(), \"/content/gen_img_{}.jpeg\".format(cur_iter))\n",
-        "\n",
-        "show_tensor_as_img(output_img)"
+        "for epoch in range(1, EPOCHS+1):\n",
+        "  train_step(output_img, model, content_targets, style_targets, \n",
+        "                    summary_writer, epoch)\n",
+        "  if epoch % 200 == 0:\n",
+        "    show_result(output_img, True)"
       ],
       "execution_count": 0,
       "outputs": []
